# module-sqlite3

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  README  README-BINARIES  RELEASE-NOTES  configure.ac  qore-sqlite3-module.spec
cmake/: config.h.in
docs/: mainpage.dox.tmpl  sqlite3-module-doc.html
src/: Makefile.am  sqlite3connection.cc  sqlite3connection.h  sqlite3executor.cc  sqlite3executor.h  sqlite3module.cc  sqlite3module.h
test/: basic.qtest  sqlite3test-basic.q  sqlite3test-threading.q
